scripts/samples/server/client-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: server
spec:
  ports:
  - protocol: TCP
    port: 80
