scripts/samples/server/ingress-direct-demo-binding.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  creationTimestamp: null
  name: service-entry-server
  namespace: default
spec:
  hosts:
  - server.default.svc.cluster.local
#  addresses:
#    1.1.1.1
  ports:
  - name: http
    number: 80
    protocol: HTTP
  endpoints:
  - address: __REPLACEME__
    ports:
      http: 80
  resolution: STATIC
  location: MESH_EXTERNAL #MB
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  creationTimestamp: null
  name: dest-rule-server-default
  namespace: default
spec:
  host: server.default.svc.cluster.local
  trafficPolicy:
    tls:
      caCertificates: /etc/certs/root-cert.pem
      clientCertificate: /etc/certs/cert-chain.pem
      mode: MUTUAL
      privateKey: /etc/certs/key.pem
      sni: server.default.svc.cluster.local
---
